--- a/src/App.css
+++ b/src/App.css
@@ -149,21 +149,32 @@
 .games-carousel-container {
   width: 100vw;
   height: 90vh;
-  padding: 2%;
+  padding: 5%;
   overflow-x: hidden;
   display: flex;
   flex-direction: column;
-  column-gap: 30vh;
 }
 
 .games-carousel-container h1 {
   color: white;
-  font-size: 40px;
+  font-size: 49px;
   font-weight: 900;
 }
 
-.games-carousel-container h3 {
+.games-carousel-container h2 {
+  font-size: 35px;
+  font-weight: bolder;
   color: white;
+  margin: 3vh
+}
+
+.games-carousel-container p {
+  font-size: 22px;
+  font-weight: bolder;
+  color: white;
+  margin-left: 3vh;
+  padding:0;
+  margin-top: -3vh;
 }
 
 .description2 {
@@ -299,6 +310,9 @@
   position: fixed;
   z-index: -1;
   width: 100%;
+  margin: 0;
+  border: 0;
+  padding: 0;
 }
 
 .gamespage .wh-navbar > *,
@@ -911,7 +925,7 @@ path {
   align-items: flex-start;
 }
 
-.gamespage-video {
+#consultingpage .gamespage-video {
   filter: grayscale(50%);
   filter: blur(0.2em);
   position: absolute;
