--- a/src/App.css
+++ b/src/App.css
@@ -76,6 +76,10 @@
   height: min-content;
 }
 
+.gameinfo-container {
+  border: 1px solid red;
+}
+
 .ovoLogo {
   opacity: 0.6;
   width: 20em;
@@ -139,8 +143,6 @@
   width: 100vw;
   display: flex;
   flex-direction: column;
-  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.4);
-  object-fit: contain;
   align-items: center;
   justify-content: flex-start;
   overflow-x: hidden;
@@ -155,26 +157,58 @@
   flex-direction: column;
 }
 
-.games-carousel-container h1 {
+.carousel-control-container {
+ display: flex;
+ flex-direction: row;
+ width: max-content;
+ height: 52px;
+ align-items: center;
+ border-right: 1px solid yellow;
+}
+
+.carousel-control {
+  background: none;
   color: white;
-  font-size: 49px;
+  font-size: 3em;
+  text-shadow: none;
+  opacity:1;
+  height: 100%;
+  cursor: pointer;
+}
+
+.titles-homepage h1 {
+  color: white;
+  font-size: 50px;
   font-weight: 900;
 }
 
-.games-carousel-container h2 {
-  font-size: 35px;
-  font-weight: bolder;
-  color: white;
-  margin: 3vh
-}
 
-.games-carousel-container p {
+.titles-homepage p {
   font-size: 22px;
   font-weight: bolder;
   color: white;
-  margin-left: 3vh;
-  padding:0;
-  margin-top: -3vh;
+  width: 55px;
+  text-align: center;
+}
+
+.titreetannee {
+  display: flex;
+  flex-direction: row;
+  width: max-content;
+  column-gap: 10px;
+  border: 1px solid dodgerblue;
+  margin-left: 5vw;
+  margin-top: 2vw;
+}
+
+#titrejeu {
+  font-size: 40px;
+  color: white;
+  font-weight: lighter;
+}
+
+#yearjeu {
+  font-weight: lighter;
 }
 
 .description2 {
@@ -186,11 +220,13 @@
 
 .platformslist {
   display: flex;
-  gap: 1.5vw;
+  gap: 1.3vw;
+  align-self: flex-start;
 }
 
 .partnerslogo {
-  width: 250px
+  width: 250px;
+
 }
 
 .dedra-intro {
@@ -356,7 +392,7 @@
   align-items: center;
 }
 
-.aboutpage {
+#aboutpage {
   width: 100vw;
   height: 100vh;
   overflow-x: clip;
@@ -378,7 +414,7 @@
   );
 }
 
-.aboutpage > * {
+#aboutpage > * {
   box-sizing: border-box;
 }
 
@@ -394,24 +430,25 @@
   justify-content: center;
   animation-duration: 2s;
 }
-.aboutpage h1 {
+#boutpage h1 {
   font-size: 35px;
   text-align: center;
 }
 
 .arrow-box {
   position: absolute;
-  top: 75vh;
+  top: 92vh;
   left: 50%;
   transform: translate(-50%, -50%);
+  cursor: pointer;
 }
 
 .arrow-box span {
   display: block;
   width: 20px;
   height: 20px;
-  border-bottom: 2px solid #000;
-  border-right: 2px solid #000;
+  border-bottom: 2px solid #ffffff;
+  border-right: 2px solid #ffffff;
   transform: rotate(45deg);
   margin: -10px;
   animation: animate 2s infinite;
