--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -33,7 +33,7 @@
   box-shadow: rgb(0, 0, 0, 0.1) 0 5px 10px 1px;
 }
 
-.aboutpage .navbar-shadow {
+#aboutpage .navbar-shadow {
   background-color: rgb(255, 255, 255, 0.7);
   box-shadow: rgb(0, 0, 0, 0.1) 0 5px 10px 1px;
   backdrop-filter: blur(8px);
