--- a/src/components/VerticalCarousel.css
+++ b/src/components/VerticalCarousel.css
@@ -21,6 +21,16 @@ img {
 }
 
 /* REGLER LA TAILLE DE LA POLICE ET LA HAUTEUR ENTRE LES LIGNES */
+
+.carousel-inner {
+  display: flex;
+  flex-direction: column;
+  margin-left: 5vw;
+  margin-top: 2vh;
+  height: 10em;
+  border: 1px solid greenyellow;
+}
+
 .carousel-inner p,
 .carousel-item {
   font-weight: 700;
@@ -34,7 +44,6 @@ img {
   content: "";
   z-index: 1;
   position: absolute;
-  height: 140px;
   pointer-events: none;
   overflow-x: hidden;
 }
@@ -60,7 +69,6 @@ img {
 
 .carousel-item.visible {
   opacity: 1;
-  height: max-content;
 }
 
 .carousel-item.visible:not(.active) {
@@ -68,18 +76,9 @@ img {
   width: auto;
 }
 
-.carousel-control {
-  background: none;
-  color: rgba(255, 255, 255, 0.4);
-  font-size: 3em;
-  text-shadow: none;
-  margin-top: 5em;
-  opacity:1;
-}
-
-.gamesimages {
+.game-image {
   width: auto;
-  height: 4em;
+  height: 5em
 }
 
 @media screen and (max-width: 900px) {
