redesign team cards

--- a/src/App.css
+++ b/src/App.css
@@ -165,7 +165,7 @@
   width: 100%;
   height: 100%;
   content: '';
-  background: linear-gradient(rgba(0,0,0,0.3), rgb(0, 0, 0));
+  background: linear-gradient(rgba(0, 0, 0, 0.6),rgb(0, 0, 0,0.3), rgb(0, 0, 0,0.3), rgb(0, 0, 0,0.4), rgb(0, 0, 0));
 }
 
 
@@ -224,10 +224,12 @@
   font-size: 40px;
   color: white;
   font-weight: lighter;
+  text-shadow: rgb(0, 0, 0) 1px 0 15px;
 }
 
 #yearjeu {
   font-weight: lighter;
+  text-shadow: rgb(0, 0, 0) 1px 0 10px;
 }
 
 .description2 {
@@ -236,6 +238,7 @@
   font-size: 20px;
   font-weight: lighter;
   text-align: justify;
+  text-shadow: rgb(0, 0, 0) 1px 0 10px;
 }
 
 .platformslist {
@@ -501,8 +504,8 @@
   padding-left: 7em;
   background: linear-gradient(
     0deg,
-    rgb(0, 0, 0) 31%,
-    rgb(41, 41, 41) 100%
+    rgb(34, 34, 34) 31%,
+    rgb(19, 19, 19) 100%
   );
 }
 
@@ -526,19 +529,22 @@
   align-items: center;
   background: linear-gradient(
     0deg,
-    rgb(0, 0, 0) 31%,
-    rgb(41, 41, 41) 100%
+    rgb(54, 54, 54) 31%,
+    rgb(35, 35, 35) 100%
   );
+}
+
+.teamcontainer > h1 {
+  color: white;
 }
 
 .teammembers {
   display: flex;
   column-gap: 7em;
-  margin: 3em;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  max-width: 1670px;
+  max-width: 1200px;
 }
 
 .teammembers img {
@@ -553,26 +559,25 @@
 }
 
 .card {
-  width: 450px;
-  height: 250px;
-  background-color: #fff;
-  background: linear-gradient(#f8f8f8, #fff);
-  box-shadow: 0 8px 16px -8px rgba(0,0,0,0.4);
-  border-radius: 6px;
+  width: 300px;
+  height: 400px;
+  box-shadow: 8px 16px -8px rgba(136, 136, 136, 0.4);
+  border-radius: 9px;
   overflow: hidden;
   position: relative;
   margin: 1.5rem;
+  border: 1px solid rgba(255, 255, 255, 0.534);
+  box-shadow: 5px 10px 25px rgba(0, 0, 0, 0.281);
 }
 
 .card h1 {
-  text-align: center;
+  color: white;
 }
 
 .card .additional {
   position: absolute;
-  width: 150px;
+  width: 0px;
   height: 100%;
-  background: linear-gradient(#dE685E, #EE786E);
   transition: width 0.4s;
   overflow: hidden;
   z-index: 2;
@@ -588,36 +593,9 @@
   border-left: 2px solid rgba(0,0,0,0.025);
 }
 
-.card.green .additional {
-  background: linear-gradient(#92bCa6, #A2CCB6);
-}
-
 .card:hover .additional {
   width: 100%;
   border-radius: 0 5px 5px 0;
-}
-
-.card .additional .more-info {
-  width: 300px;
-  float: left;
-  position: absolute;
-  left: 150px;
-  height: 100%;
-}
-
-.card .additional .more-info h1 {
-  color: #fff;
-  margin-bottom: 0;
-}
-
-.card .additional .coords {
-  margin: 0 1rem;
-  color: #fff;
-  font-size: 0.9rem;
-}
-
-.card .additional .coords span + span {
-  float: right;
 }
 
 .card .additional .stats {
@@ -661,22 +639,14 @@
 }
 
 .card .general {
-  width: 300px;
   height: 100%;
-  position: absolute;
   top: 0;
   right: 0;
   z-index: 1;
   box-sizing: border-box;
-  padding: 1rem;
   padding-top: 0;
-}
-
-.card .general .more {
-  position: absolute;
-  bottom: 1rem;
-  right: 1rem;
-  font-size: 0.9em;
+  text-align: center;
+  color: white;
 }
 
 @media screen and (max-width: 1080px) {
