--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500&display=swap");
+@import "react-alice-carousel/lib/alice-carousel.css";
 
 @font-face {
   font-family: "AddLGBitmap09";
@@ -52,28 +53,67 @@
   align-items: center;
 }
 
-.textside {
-  flex: 1;
-  display: grid;
-  grid-template-columns: min-content auto;
-  grid-template-rows: min-content;
-  gap: 5em 2em;
-  animation: fadeInLeft; /* referring directly to the animation's @keyframe declaration */
-  animation-duration: 0.7s; /* don't forget to set a duration! */
+.white_content {
+  position: absolute;
+  align-items: flex-end;
+  width: fit-content;
+  height: fit-content;
+  z-index: 1002;
+  left: 85em;
+  bottom: 20em;
+}
+.white_content > img {
+  width: auto;
+  height: 350px;
+  border: 3px solid rgb(255, 255, 255);
+  border-radius: 8px;
 }
 
-.rectangle {
-  width: 12px;
-  height: 13em;
-  background: linear-gradient(360deg, rgba(129, 20, 20, 0) 0%, #000000 100%);
-  grid-row: 1 / 2;
-  grid-column: 1 / 2;
+.white_content > a {
+  cursor: pointer;
+  color: white;
+  font-size: 60px;
+  font-weight: bolder;
+  text-shadow: rgb(0, 0, 0) 1px 0 10px;
+  position: absolute;
+  top: 16px;
+  right: 18px;
+  font-size: 18px;
 }
 
-.gametitlebox {
-  grid-row: 1 / 2;
-  grid-column: 2 / 3;
-  height: min-content;
+.white_content > p {
+  color: #D83978;
+  text-shadow: #EB538F 1px 0 10px;
+  text-align: center;
+  font-weight: bolder;
+  animation: flickerz 3.5s infinite alternate;
+}
+
+/* Flickering animation */
+@keyframes flickerz {
+    
+  0%, 18%, 22%, 25%, 53%, 57%, 100% {
+
+      text-shadow:
+      0 0 4px #ee6b9f,
+      0 0 11px #ee6b9f,
+      0 0 19px #ee6b9f,
+      0 0 40px #EB538F,
+      0 0 80px #EB538F,
+      0 0 90px #EB538F,
+      0 0 100px #EB538F,
+      0 0 150px #EB538F;
+  
+  }
+  
+  20%, 24%, 55% {        
+      text-shadow: none;
+  }    
+}
+
+
+.white_content > p::after {
+  content: url();
 }
 
 .gameinfo-container {  
@@ -88,11 +128,6 @@
   opacity: 0.6;
   width: 20em;
   height: auto;
-}
-
-.description {
-  margin-top: 2em;
-  opacity: 0.6;
 }
 
 .textside > a {
@@ -168,12 +203,11 @@
   background: linear-gradient(rgba(0, 0, 0, 0.6),rgb(0, 0, 0,0.3), rgb(0, 0, 0,0.3), rgb(0, 0, 0,0.4), rgb(0, 0, 0));
 }
 
-
 .games-carousel-container {
   width: 100vw;
   height: 90vh;
   padding: 5%;
-  overflow-x: hidden;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
 }
@@ -425,7 +459,7 @@
   height: 100%;
   background: linear-gradient(
     0deg,
-    rgb(41, 41, 41) 31%,
+    rgb(35, 35, 35) 31%,
     rgb(0, 0, 0) 100%
   );
 }
@@ -445,7 +479,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   animation-duration: 2s;
 }
 #boutpage h1 {
@@ -505,17 +539,34 @@
   background: linear-gradient(
     0deg,
     rgb(34, 34, 34) 31%,
-    rgb(19, 19, 19) 100%
+    rgb(13, 13, 13) 100%
   );
   color: white;
   font-size: larger;
   text-align: justify;
 }
 
-.historycontainer h2, .historycontainer p {
+.historycontainer h2, .historycontainer p, .videos-container p {
   max-width: 70%;
 }
-.historycontainer p { font-weight: lighter;}
+.historycontainer p, .videos-container p { font-weight: lighter;}
+
+.videos-container {
+  width: 100vw;
+  height: 130vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+    background: linear-gradient(
+    0deg,
+    rgb(42,42,42) 31%,
+    rgb(34, 34, 34) 100%
+  );
+  color: white;
+  font-size: larger;
+  text-align: justify;
+}
 
 .quisommesnous {
   max-width: 500px;
@@ -523,9 +574,18 @@
   color: white;
 }
 
-.ossamadam {
-  width: auto;
-  height: 100%;
+.alice-carousel {
+}
+
+.alice-carousel__stage {
+}
+
+.alice-carousel__stage-item {
+  opacity: 0.5;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1fr;
 }
 
 .teamcontainer {
@@ -538,7 +598,7 @@
   background: linear-gradient(
     0deg,
     rgb(54, 54, 54) 31%,
-    rgb(35, 35, 35) 100%
+    rgb(42, 42, 42) 100%
   );
 }
 
@@ -738,7 +798,7 @@
 .socialmedias2 {
   width: auto;
   display: grid;
-  grid-template-columns: repeat(3, 9em);
+  grid-template-columns: repeat(4, 9em);
   animation: backInLeft;
   animation-duration: 1s;
 }
@@ -776,6 +836,7 @@ path {
 }
 
 .bi-youtube path,
+.bi-linkedin path,
 .bi-discord path,
 .bi-twitter path {
   fill: rgba(0, 0, 0, 0.5);
@@ -791,6 +852,10 @@ path {
 
 .bi-twitter:hover path {
   fill: #1da1f2;
+}
+
+.bi-linkedin:hover path {
+  fill:#0A66C2
 }
 
 .extra-info {
