--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -73,6 +73,7 @@
 li.different {
   border: none;
   position: relative;
+  text-shadow: rgba(0, 0, 0, 0.507) 1px 0 10px;
 }
 li.different:hover {
   border: none;
@@ -107,6 +108,7 @@ li.different:hover {
 }
 .whiteDedra {
   color: rgb(255, 255, 255) !important;
+  text-shadow: rgba(0, 0, 0, 0.507) 1px 0 10px;
 }
 
 .dedra-logo {
