--- a/src/App.css
+++ b/src/App.css
@@ -573,7 +573,7 @@
 
 .videos-container {
   width: 100%;
-  height: 100vh;
+  height: 70vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -581,7 +581,7 @@
   gap: 3em;
   background: linear-gradient(
     0deg,
-    rgb(34, 34, 34) 31%,
+    rgb(32, 32, 32) 31%,
     rgb(19, 19, 19) 100%
   );
   color: white;
@@ -596,6 +596,39 @@
 
 .videos-container div iframe { border: 1px solid white}
 
+.partners-container {
+width: 100%;
+height: 40vh;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: space-evenly;
+color: white;
+background: linear-gradient(
+  0deg,
+  rgb(45, 45, 45) 31%,
+  rgb(32, 32, 32) 100%
+);
+}
+
+.partners-container > div {
+  width: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.partners-logo {
+  width: auto;
+  height: 80px;
+  opacity: 0.5;
+}
+
+.partners-logo:hover { 
+  opacity: 1;
+}
+
 .teamcontainer {
   width: 100%;
   height: 100%;
@@ -606,11 +639,11 @@
   background: linear-gradient(
     0deg,
     rgb(54, 54, 54) 31%,
-    rgb(35, 35, 35) 100%
+    rgb(45, 45, 45) 100%
   );
 }
 
-.teamcontainer > h1 {
+.teamcontainer > h1, .teamcontainer > p, .teamcontainer p > * {
   color: white;
   margin-bottom: 4em;
 }
