--- a/src/App.css
+++ b/src/App.css
@@ -600,9 +600,10 @@
 width: 100%;
 height: 80vh;
 display: flex;
-flex-direction: column;
+flex-direction: row;
+column-gap: 20%;
 align-items: center;
-justify-content: space-evenly;
+justify-content: center;
 color: white;
 background: linear-gradient(
   0deg,
@@ -612,11 +613,11 @@ background: linear-gradient(
 }
 
 .partners-container > div {
-  width: 50%;
+  width: 20%;
   display: flex;
   row-gap: 3em;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
 }
 
