--- a/src/components/VerticalCarousel.css
+++ b/src/components/VerticalCarousel.css
@@ -81,19 +81,25 @@ img {
 }
 
 @media screen and (max-width: 900px) {
-  .carousel-inner {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    text-align: start;
-    width: 100%;
-    margin: 0;
-  }
 
-  .gamesimages {
-    width: auto;
-    height: 3em;
-  }
+.carousel-inner {
+  width: 100%;
+  display: flex;
+  margin: 0;
+  margin-right: 12%;
+}
+.carousel-inner > * {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+.carousel-item {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+
 }
 
 .left:hover, .right:hover {
