--- a/src/App.css
+++ b/src/App.css
@@ -150,7 +150,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   content: '';
   background: linear-gradient(rgba(0, 0, 0, 0.6),rgb(0, 0, 0,0.3), rgb(0, 0, 0,0.3), rgb(0, 0, 0,0.4), rgb(0, 0, 0));
@@ -732,13 +732,11 @@ background: linear-gradient(
 }
 
 @media screen and (max-width: 900px) {
+
 .games-carousel-container {
   display: flex;
   flex-direction: column;
-  width: 100vw;
-  height: 100vh;
   align-items: center;
-  border: 1px solid red;
   position: relative;
 }
 .titles-homepage {
@@ -748,8 +746,26 @@ background: linear-gradient(
 }
 .gameinfo-container {
   flex-direction: column;
+  margin: 0;
   align-items: center;
   justify-content: center;
+}
+
+.description2 {
+  max-width: 90%;
+}
+
+.platformslist {
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.arrow-box {
+  top: 80vh;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 }
