--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -145,6 +145,7 @@ ul.menu {
 }
 
 @media screen and (max-width: 900px) {
+
   .hbrgerLogo {
     display: block;
     position: absolute;
@@ -154,7 +155,7 @@ ul.menu {
   .menu {
     top: 0;
     left: 0;
-    position: absolute;
+    position: fixed;
     background: rgb(255, 255, 255);
     width: 100%;
     height: 100%;
